--- a/texmf/tex/latex/commonstuff/homework.sty
+++ b/texmf/tex/latex/commonstuff/homework.sty
@@ -9,7 +9,7 @@
 \RequirePackage{fancyhdr}
 \RequirePackage{tikzducks}
 \RequirePackage{xparse}
-\RequirePackage{framed}
+\RequirePackage[skins, breakable]{tcolorbox}
 
 
 % =============================================================================
@@ -64,29 +64,36 @@
 
 % assignments - starred version is for assignments with sub-questions
 \newcounter{assignmentctr}
-\NewDocumentEnvironment{assignment}{o}{    % optional argument is the label
-    \IfValueTF{#1} {
-            \section*{\@assignmentlabel\ #1}
-        } {
-            \refstepcounter{assignmentctr}
-            \section*{\@assignmentlabel\ \theassignmentctr}
-        }
-    \begin{framed}
-} {
-    \end{framed}
+
+\newtcolorbox{tcbassignment}[1]{
+    rightrule=0pt, leftrule=0pt, bottomrule=0pt, toprule=0pt,
+    enhanced, breakable,
+    title={\textbf{\Large \@assignmentlabel\ #1}}, toptitle=2pt, after skip=2cm,
+    parbox=false
 }
+
+\NewDocumentEnvironment{assignment}{o}{     % optional argument is the label
+    \IfValueTF{#1} {
+        \begin{tcbassignment}{#1}
+    } {
+        \refstepcounter{assignmentctr}
+        \begin{tcbassignment}{\theassignmentctr}
+    }
+} {
+    \end{tcbassignment}
+}
+
 \NewDocumentEnvironment{assignment*}{o}{    % optional argument is the label
     \IfValueTF{#1} {
-            \section*{\@assignmentlabel\ #1}
-        } {
-            \refstepcounter{assignmentctr}
-            \section*{\@assignmentlabel\ \theassignmentctr}
-        }
-    \begin{framed}
+        \begin{tcbassignment}{#1}
+    } {
+        \refstepcounter{assignmentctr}
+        \begin{tcbassignment}{\theassignmentctr}
+    }
     \begin{itemize}
 } {
     \end{itemize}
-    \end{framed}
+    \end{tcbassignment}
 }
 
 % sub-questions
