--- a/texmf/tex/latex/commonstuff/preamble.sty
+++ b/texmf/tex/latex/commonstuff/preamble.sty
@@ -35,7 +35,7 @@
     \newcommand{\scripty}[1]{\ensuremath{\mathcalligra{#1}\,}}
 }
 
-\ExecuteOptions{british,parindent}
+\ExecuteOptions{british,parskip}
 
 \ProcessOptions\relax
 
