--- a/texmf/tex/latex/commonstuff/preamble.sty
+++ b/texmf/tex/latex/commonstuff/preamble.sty
@@ -60,7 +60,7 @@
 % math stuff
 \RequirePackage{amssymb,amsmath}
 \RequirePackage{amsthm}
-\RequirePackage{systeme}
+% \RequirePackage{systeme}
 \RequirePackage{circledsteps}
 % \RequirePackage{siunitx}
 
@@ -80,6 +80,9 @@
 \newcommand\vu[1]{\vb{\hat{#1}}}
 
 \newcommand\qq[1]{\quad\text{#1}\quad}
+
+\renewcommand\Im{\mathrm{Im}}
+\renewcommand\Re{\mathrm{Re}}
 
 \newcommand*{\at}{@}
 
